# FastReso

./: CMakeLists.txt  LICENSE  README  TFastReso.cpp  TFastReso.h  TFastReso_AZYHYDRO.cpp  TFastReso_AZYHYDRO.h  TFastReso_THERMINATOR.cpp  TFastReso_THERMINATOR.h  TFastReso_formulas.h  TKernel.cpp  TKernel.h  TParticle.cpp  TParticle.h  TParticle_AZYHYDRO.cpp  TParticle_AZYHYDRO.h  TParticle_THERMINATOR.cpp  TParticle_THERMINATOR.h  decays.data  grid_params.h  particles.data  qag_params.h  run_fastreso.cpp  run_fastreso_azyhydro.cpp  run_fastreso_therminator.cpp  run_kernels.cpp  run_kernels_root.cpp
cmake/: FindGSL.cmake
resonance_lists/: README  decays.data  decays_without_weak.data
